--- a/src/Frontend/package.json
+++ b/src/Frontend/package.json
@@ -4,7 +4,8 @@
   "description": "ChimeMate Telegram Mini App client",
   "private": true,
   "scripts": {
-    "build": "webpack"
+    "build": "webpack --mode development",
+    "build-prod": "webpack --mode production"
   },
   "author": "Alexander Bagatka",
   "devDependencies": {
