--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -26,9 +26,8 @@ jobs:
           npm run build-prod
 
       - name: Upload artifact
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-pages-artifact@v1
         with:
-          name: github-pages
           path: src/Frontend/dist
 
   deploy:
